deployment/dummy-app/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dummy-app
  namespace: dummy
spec:
  type: ClusterIP
  ports:
  - port: 8080
  selector:
    app: dummy-app
