deployment/dummy-app/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$2
  name: dummy-app
  namespace: dummy
spec:
  rules:
  - host: dummy.app.jessadademo.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: dummy-app
            port:
              number: 8080
